--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,15 +15,19 @@ html {
 .home-wrapper {
   min-height: 100vh;
   background-image: url(../assets/images/background.jpg);
-  background-position: center bottom;
+  background-position: center -300px;
+  background-size: 1100px;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-color: #80b571;
 }
 
 .home-container {
   margin: 0 auto;
   max-width: 1000px;
   padding-bottom: 0.5rem;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .home-header {
@@ -64,6 +68,12 @@ html {
   color: #1e4149;
 }
 
+@media only screen and (min-width: 1000px) {
+  .home-wrapper {
+    background-position: center bottom;
+    background-size: cover;
+  }
+}
 /* KEYFRAMES */
 @-webkit-keyframes appear {
   from {
